# fat_kill

./: .gitignore  Directory_Size_Viewer.iss  Directory_Size_Viewerの開発メモ.md  README.md  build_release.bat  poetryとmaturin.txt  python_poetry_to_EXE_Guide.md  コマンド退避.txt  プロジェクト実装順序.txt  プロジェクト要件ファイル.md
.github/workflows/: release-python-only.yml  release.yml
py_app/: Directory_Size_Viewer.py  check_rust_lib.py  directory_info.py  file_version_info.py  gui_feature_test.py  gui_integration_test.py  import_tester.py  main.py  parallel_test.py  progress_test.py  pyproject.toml  rust_dir_info.py  rust_main.py  rust_ui.py  test_directory_size_viewer.py  test_file.py  ui.py  version.py  version_info.py
py_app/test_dir/: minimal_gui_test.py  rust_thread_pool_test.py  test_qt.py  thread_pool_test.py
py_app/test_dir/normal_dir/subdir/: subtest.txt
py_app/test_dir/readonly_dir/: readonly.txt
py_app/tests/: test_directory_info.py  test_ui.py
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
